# Web-FullStack-Study

./: .gitignore  LICENSE  README.md  generate_devops.py  generate_frontend_projects.sh  jobs.db  task-list-backend.md  task-list-devops.md  task-list-frontend.md
1-FrontEnd/0-Html/: retc.html
1-FrontEnd/0-Html/A - html moderno/: 02-drag-and-drop.html  04-advanced-inputs.html  05-details-summary.html  06-svg-interactive.html  07-geolocation.html
1-FrontEnd/0-Html/DOM event/: domEv.html
1-FrontEnd/0-Html/acessibilidade/: index.html  main.js  style.css
1-FrontEnd/0-Html/canvas bandeira japao/: Flag.html
1-FrontEnd/0-Html/html moderno/: 01-dialog.html  02-drag-and-drop.html  03-web-components.html  04-advanced-inputs.html  05-details-summary.html  06-svg-interactive.html  07-geolocation.html
1-FrontEnd/0-Html/html semantico/: semantico.html
1-FrontEnd/0-Html/input eye/: eye.html
1-FrontEnd/1-CSS/CSS study/: README.md  (+1 more)
2-BackEnd/4-Cpp/B - Cpp avançado/02-TCP-Server-Sockets/: CMakeLists.txt  README.md
2-BackEnd/4-Cpp/B - Cpp avançado/02-TCP-Server-Sockets/include/: chat_message.hpp  chat_server.hpp  client_session.hpp  server_command.hpp  server_state.hpp  socket_config.hpp  socket_guard.hpp  socket_platform.hpp
2-BackEnd/4-Cpp/B - Cpp avançado/02-TCP-Server-Sockets/scripts/: build.ps1  run-server.ps1  sample-client.ps1  smoke.ps1
2-BackEnd/4-Cpp/B - Cpp avançado/02-TCP-Server-Sockets/src/: chat_server.cpp  main.cpp  server_command.cpp  server_state.cpp  socket_guard.cpp
2-BackEnd/4-Ruby on Rails/: RubyInit1  RubyInit1.rb
4-QA/: SimpleTest-Selenium.js
(+4984 files in other folders)
